--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang='en'><head>
   <title>Sinsong的主页 - Sinsong的个人博客</title>
-  <link rel='canonical' href='https://goldkid666.github.io/' />
+  <link rel='canonical' href='/' />
   <meta charset='utf-8'>
   <meta name='viewport' content='width=device-width, initial-scale=1' />
   <meta name='description' content='Welcome to this sample project' />
@@ -16,13 +16,13 @@
 
 
 
-<link rel="stylesheet" href="https://goldkid666.github.io/sass/style.min.8a1658d134a4b54730b66789206b2cf14c1b006a6de3f3fde6302f925b6e01f5.css" integrity="sha256-ihZY0TSktUcwtmeJIGss8UwbAGpt4/P95jAvkltuAfU=" media="screen">
-<link rel="stylesheet" href="https://goldkid666.github.io/syntax.min.css" integrity="" media="screen">
+<link rel="stylesheet" href="/sass/style.min.8a1658d134a4b54730b66789206b2cf14c1b006a6de3f3fde6302f925b6e01f5.css" integrity="sha256-ihZY0TSktUcwtmeJIGss8UwbAGpt4/P95jAvkltuAfU=" media="screen">
+<link rel="stylesheet" href="/syntax.min.css" integrity="" media="screen">
 
   <meta property="og:title" content="Sinsong的主页" />
 <meta property="og:description" content="Welcome to this sample project" />
 <meta property="og:type" content="website" />
-<meta property="og:url" content="https://goldkid666.github.io/" /><meta property="og:image" content="https://goldkid666.github.io/images/sample.jpg" />
+<meta property="og:url" content="/" /><meta property="og:image" content="/images/sample.jpg" />
 
 
   <meta itemprop="name" content="Sinsong的主页">
@@ -32,12 +32,12 @@
 
   <header style="background-image:linear-gradient(
       rgba(0,0,0,0.4),rgba(0,0,0,0.4)
-    ),url(&#39;https://goldkid666.github.io/images/default-sidebar.jpg&#39;)">
+    ),url(&#39;images/default-sidebar.jpg&#39;)">
 
   <div class="intro">
     <div class="logo-container">
       <a href="/">
-        <img src='https://goldkid666.github.io/images/edna-west.jpg' alt="Profile Sinsong的主页" class="rounded-logo">
+        <img src='images/edna-west.jpg' alt="Profile Sample project" class="rounded-logo">
       </a>
     </div>
     <h2>Hi, I'm Singsong 👋</h2>
@@ -190,7 +190,7 @@
   
 
 <span  class="active">
-  <a href="https://goldkid666.github.io/">Sinsong的主页</a>
+  <a href="/">Sinsong的主页</a>
   
 </span>
 
@@ -211,7 +211,7 @@
   
     
       <div class="portfolio-list">
-  <a href="https://goldkid666.github.io/portfolio/sample-project/">
+  <a href="/portfolio/sample-project/">
     <div class="portfolio-container">
       <img title="Sample project" alt="Sample project" src="/portfolio/sample-project/sample.jpg" />
       <div class="img-overlay">
