--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
         <p>
             <a href="/about/">
-                About
+                关于我
             </a>
         </p>
 
@@ -59,7 +59,7 @@
 
         <p>
             <a href="/post/">
-                Post
+                我的文章
             </a>
         </p>
 
@@ -206,7 +206,7 @@
 <p><a href="/about" title="Get to know me better">Get to know me better</a></p>
 
 
-<h2>My Latest Project</h2>
+<h2>我最近的项目</h2>
   
   
     
