--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <title>Sinsong的主页 - Sinsong的个人博客</title>
   <link rel='canonical' href='/' />
   <meta charset='utf-8'>
+  <meta name="baidu-site-verification" content="code-srFwTe2cn0" />
   <meta name='viewport' content='width=device-width, initial-scale=1' />
   <meta name='description' content='Welcome to this sample project' />
   <meta name='theme-color' content='#FD3519' />
