--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
   <title>Sinsong的主页 - Sinsong的个人博客</title>
   <link rel='canonical' href='/' />
   <meta charset='utf-8'>
-  <meta name="baidu-site-verification" content="code-srFwTe2cn0" />
   <meta name='viewport' content='width=device-width, initial-scale=1' />
   <meta name='description' content='Welcome to this sample project' />
   <meta name='theme-color' content='#FD3519' />
@@ -38,7 +37,7 @@
   <div class="intro">
     <div class="logo-container">
       <a href="/">
-        <img src='/images/gopher.png' alt="Profile ABOUT" class="rounded-logo">
+        <img src='/images/gopher.png' alt="Profile Sinsong的主页" class="rounded-logo">
       </a>
     </div>
     <h2>Hi, I'm Singsong 👋</h2>
